--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "graphql-tag": "^2.11.0",
     "mdbvue": "^6.7.2",
     "vue": "^2.6.11",
-    "vue-apollo": "^3.0.5"
+    "vue-apollo": "^3.0.5",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
